<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="videoformat_pyrowave">PyroWave (experimental)</string>
</resources>
